--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-identity:7.3.0'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.0'
-    compile 'com.github.wenchaojiang:AndroidSwipeableCardStack:0.1.3'
-//    compile 'com.wenchao:cardstack:1.1.0'
+//    compile 'com.github.wenchaojiang:AndroidSwipeableCardStack:0.1.3'
+    compile 'com.wenchao:cardstack:1.1.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
 
