--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://jitpack.io" }
-//        maven { url "http://dl.bintray.com/juanpablo/maven" }
+//        maven { url "https://jitpack.io" }
+        maven { url "http://dl.bintray.com/juanpablo/maven" }
     }
 }
 
