implement selection options when managing photos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.MainActivity"></activity>
+        <activity android:name=".activities.EditPhotoActivity"></activity>
     </application>
 
 </manifest>
