setup tell fragment and edits navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity"></activity>
-        <activity android:name=".activities.EditPhotoActivity"></activity>
+        <activity android:name=".activities.MainActivity">
+        </activity>
+        <activity
+            android:name=".activities.EditPhotoActivity"
+            android:parentActivityName=".activities.MainActivity"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.wahlzeit.mobile.activities.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
